deployment/Backend/gunicorn.yaml
apiVersion: v1
kind: Service
metadata:
  name: gunicorn-service
spec:
  selector:
    app: gunicorn
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
